--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,6 @@
             "extensionName": ".css",
             "savePath": "css/"
         }
-    ]
+    ],
+    "svg.preview.background": "black"
 }
